--- a/wicket.jsp/pom.xml
+++ b/wicket.jsp/pom.xml
@@ -5,58 +5,96 @@
 	<artifactId>wicket.jsp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+
+	<properties>
+		<jetty.version>8.1.15.v20140411</jetty.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<wicket.version>6.16.0</wicket.version>
+		<servlet.api.version>3.0.1</servlet.api.version>
+		<junit.version>4.11</junit.version>
+		<common.httpclient.version>4.3.5</common.httpclient.version>
+		<common.io>2.4</common.io>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-core</artifactId>
-			<version>6.16.0</version>
+			<version>${wicket.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
+			<version>${servlet.api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.7</version>
+			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<!-- Test dependencies -->
 
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>8.1.13.v20130916</version>
+			<version>${jetty.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
-			<version>8.1.13.v20130916</version>
+			<version>${jetty.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>8.1.13.v20130916</version>
+			<version>${jetty.version}</version>
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-jsp</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${common.httpclient.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${common.io}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
