--- a/wicket.jsp/pom.xml
+++ b/wicket.jsp/pom.xml
@@ -5,17 +5,14 @@
 	<artifactId>wicket.jsp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-
 	<properties>
-		<jetty.version>8.1.15.v20140411</jetty.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<wicket.version>6.16.0</wicket.version>
-		<servlet.api.version>3.0.1</servlet.api.version>
+		<servlet.api.version>2.5</servlet.api.version>
+		<servlet.jsp.api.version>2.2</servlet.jsp.api.version>
 		<junit.version>4.11</junit.version>
-		<common.httpclient.version>4.3.5</common.httpclient.version>
-		<common.io>2.4</common.io>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
@@ -26,8 +23,15 @@
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
+			<artifactId>servlet-api</artifactId>
 			<version>${servlet.api.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${servlet.jsp.api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -51,48 +55,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-webapp</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-jsp</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>${common.httpclient.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${common.io}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
