--- a/wicket.jsp/pom.xml
+++ b/wicket.jsp/pom.xml
@@ -10,6 +10,7 @@
 		<wicket.version>6.16.0</wicket.version>
 		<servlet.api.version>2.5</servlet.api.version>
 		<servlet.jsp.api.version>2.2</servlet.jsp.api.version>
+		<faces.api.version>2.2.8-01</faces.api.version>
 		<junit.version>4.11</junit.version>
 	</properties>
 
@@ -34,7 +35,14 @@
 			<version>${servlet.jsp.api.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>${faces.api.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
