--- a/jee-web-parent/jee-web-examples/pom.xml
+++ b/jee-web-parent/jee-web-examples/pom.xml
@@ -1,54 +1,76 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.wicketstuff</groupId>
+	<parent>
+		<groupId>org.wicketstuff</groupId>
+		<artifactId>jee-web-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 	<artifactId>wicketstuff-jee-web-examples</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>JEE Web Integration Examples</name>
 
+	<developers>
+		<developer>
+			<id>klopfdreh</id>
+			<name>Tobias Soloschenko</name>
+			<email>tobias [dot] soloschenko [at] googlemail [dot] com</email>
+		</developer>
+	</developers>
+	
+	<properties>
+		<java.version>1.6</java.version>
+		
+		<wicketstuff-jee-web.version>0.0.1-SNAPSHOT</wicketstuff-jee-web.version>
+		<wicket.version>6.16.0</wicket.version>
+		<servlet.api.version>2.5</servlet.api.version>
+		<commons-lang.version>3.3.2</commons-lang.version>
+		<jsf.version>2.1.13</jsf.version>
+		<jstl.version>1.2</jstl.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-core</artifactId>
-			<version>6.16.0</version>
+			<version>${wicket.version}</version>
 		</dependency>
 
 		<dependency> <!-- Add right dependency here -->
 			<groupId>org.wicketstuff</groupId>
 			<artifactId>wicketstuff-jee-web</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${wicketstuff-jee-web.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
+			<artifactId>servlet-api</artifactId>
+			<version>${servlet.api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
+			<version>${commons-lang.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
-			<version>2.1.13</version>
+			<version>${jsf.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<version>2.1.13</version>
+			<version>${jsf.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>${jstl.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -58,8 +80,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
